[gd_scene load_steps=6 format=2]

[ext_resource path="res://Models/Weapons/grenade.obj" type="ArrayMesh" id=1]
[ext_resource path="res://ModelScenes/Grenade.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.454902, 0.301961, 0.2, 1 )

[sub_resource type="CylinderShape" id=2]
radius = 0.328887
height = 0.864991

[sub_resource type="SphereShape" id=3]
radius = 21.9364

[node name="Grenade" type="RigidBody"]
collision_layer = 0
mass = 0.3
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011485, 0.201355, 0.0243996 )
shape = SubResource( 2 )

[node name="BlastRadius" type="Area" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="BlastRadius"]
shape = SubResource( 3 )

[node name="Trigger" type="Area" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011485, 0.201355, 0.0243996 )
shape = SubResource( 2 )

[node name="BlastTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="BlastRadius" to="." method="_on_BlastRadius_body_entered"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="timeout" from="BlastTimer" to="." method="_on_BlastTimer_timeout"]
